# aforit

./: README.md  pyproject.toml  requirements.txt  setup.py
aforit/: __init__.py  main.py
aforit/core/: __init__.py  agent.py  config.py  context.py  conversation_summarizer.py  event_bus.py  memory.py  middleware.py  pipeline.py  registry.py  scheduler.py  session.py
aforit/llm/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py  router.py
aforit/plugins/: __init__.py  api_tester.py  docker_plugin.py  git_plugin.py  loader.py
aforit/tools/: __init__.py  base.py  code_executor.py  database_tool.py  file_manager.py  search_tool.py  shell_tool.py  web_scraper.py
aforit/ui/: __init__.py  components.py  markdown_renderer.py  terminal.py  themes.py
aforit/utils/: ast_analyzer.py  cache.py  crypto.py  diff_engine.py  file_watcher.py  logger.py  metrics.py  process_manager.py  rate_limiter.py  retry.py  templating.py  token_counter.py  validators.py
tests/: __init__.py  test_cache.py  test_config.py  test_memory.py  test_registry.py  test_session.py  test_tools.py  test_validators.py
